--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "name": "onlyprivbot",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "axios": "^1.9.0",
     "dotenv": "^16.5.0",
